[package]
name = "axact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
sysinfo = "0.29.10"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
serde_json = "1.0"
